Added Restaurant, MenuItem, Created DB Tables, Resolved Liquidbase errors

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.username=catalog_user
 spring.datasource.password=your_password
 spring.jpa.hibernate.ddl-auto=update
+
+# Liquibase properties
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
