--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-changeLogFile=src/main/resources/db/changelog/db.changelog-master.xml
+changeLogFile=classpath:/db/changelog/db.changelog-master.yaml
 url=jdbc:postgresql://localhost:5432/catalogdb
 username=catalog_user
 password=your_password
