--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ java {
 liquibase {
     activities {
         main {
-            changeLogFile 'src/main/resources/db/changelog/db.changelog-master.xml'
+            changeLogFile 'src/main/resources/db/changelog/db.changelog-master.yaml'
             url 'jdbc:postgresql://localhost:5432/catalogdb'
             username 'catalog_user'
             password 'your_password'
@@ -37,6 +37,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.postgresql:postgresql' //	postgresql
     implementation 'org.liquibase:liquibase-core'
+    implementation 'org.projectlombok:lombok:1.18.24' //	lombok
+    annotationProcessor 'org.projectlombok:lombok:1.18.24' //	lombok
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
