--- a/build.gradle
+++ b/build.gradle
@@ -32,14 +32,15 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'org.springframework.boot:spring-boot-starter-web' //	web
+    testImplementation 'org.springframework.boot:spring-boot-starter-test' //	test
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher' //	junit
     implementation 'org.postgresql:postgresql' //	postgresql
-    implementation 'org.liquibase:liquibase-core'
+    implementation 'org.liquibase:liquibase-core' //	liquibase
     implementation 'org.projectlombok:lombok:1.18.24' //	lombok
     annotationProcessor 'org.projectlombok:lombok:1.18.24' //	lombok
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security' //	security
 }
 
 tasks.named('test') {
