--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.24' //	lombok
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security' //	security
+    implementation 'javax.servlet:javax.servlet-api:4.0.1' //	servlet
 }
 
 tasks.named('test') {
